Version 2.02.44 - 
====================================
  Generate Red Hat clvmd startup script at configuration time with correct paths.
  Fix clvmd & dmeventd builds after tree restructuring.
  Cope with snapshot dependencies when removing a whole VG with lvremove.
  Make man pages consistent with either-or options (use "|" everywhere).

Version 2.02.43 - 10th November 2008
====================================
  Merge device-mapper into the lvm2 tree.
  Correct prototype for --permission on lvchange and lvcreate man pages.
  Exit with non-zero status from vgdisplay if couldn't show any requested VG.
  Move list.c into libdevmapper and rename functions.
  Rename a couple of variables that matched function names.
  Use simplified x.y.z version number in libdevmapper.pc.
  Remove ancient debian directory.
  Split out lvm-logging.h from log.h and lvm-globals.[ch] from log.[ch].

Version 2.02.42 - 26th October 2008
===================================
  Accept locking fallback_to_* options in the global section as documented.
  Fix temp table activation in mirror conversions not to happen in other cmds.
  Fix temp table in mirror conversions to use always-present error not zero.

Version 2.02.41 - 17th October 2008
===================================
  Use temp table to set device size when converting mirrors.
  In resume_mirror_images replace activate_lv with resume_lv as workaround.
  Avoid overwriting in-use on-disk text metadata by forgetting MDA_HEADER_SIZE.
  Fix snapshot monitoring library to not cancel monitoring invalid snapshot.
  Generate man pages from templates and include version.
  Add usrlibdir and usrsbindir to configure.
  Fix conversion of md chunk size into sectors.
  Free text metadata buffer after a failure writing it.
  Fix misleading error message when there are no allocatable extents in VG.
  Fix handling of PVs which reappeared with old metadata version.
  Fix mirror DSO to call vgreduce with proper parameters.